--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -39,7 +39,7 @@ img {
 /*
  * Стили компонента Searchbar
  */
-.Searchbar {
+.searchbar {
   top: 0;
   left: 0;
   position: sticky;
@@ -61,7 +61,8 @@ img {
 /*
  * Стили компонента SearchForm
  */
-.SearchForm {
+/* .SearchForm */
+.form {
   display: flex;
   align-items: center;
   width: 100%;
@@ -71,7 +72,8 @@ img {
   overflow: hidden;
 }
 
-.SearchForm-button {
+/* .SearchForm-button */
+.button {
   display: inline-block;
   width: 48px;
   height: 48px;
@@ -86,11 +88,12 @@ img {
   outline: none;
 }
 
-.SearchForm-button:hover {
+.button:hover {
   opacity: 1;
 }
 
-.SearchForm-button-label {
+/* .SearchForm-button-label  */
+.button__label {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -102,7 +105,8 @@ img {
   border: 0;
 }
 
-.SearchForm-input {
+/* .SearchForm-input */
+.input {
   display: inline-block;
   width: 100%;
   font: inherit;
@@ -113,7 +117,7 @@ img {
   padding-right: 4px;
 }
 
-.SearchForm-input::placeholder {
+.input::placeholder {
   font: inherit;
   font-size: 18px;
 }
@@ -121,7 +125,8 @@ img {
 /*
  * Стили компонента ImageGallery
  */
-.ImageGallery {
+/* .ImageGallery */
+.gallery {
   display: grid;
   max-width: calc(100vw - 48px);
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
@@ -137,7 +142,8 @@ img {
 /*
  * Стили компонента ImageGalleryItem
  */
-.ImageGalleryItem {
+/* .ImageGalleryItem */
+.gallery__item {
   border-radius: 2px;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
